# MRPNN

./: .gitignore  CMakeLists.txt  CMakeSettings.json  main.cu
core/: GUI.hpp  camera.cu  camera.hpp  gen.cu  gen.cuh  render.cuh  volume.cu  volume.hpp
